deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: be-app
  template:
    metadata:
      labels:
        app: be-app
    spec:
      containers:
      - name: be-app
        image: devbhutani10/sample-cicd:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: be-service
  namespace: default
spec:
  selector:
    app: be-app
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
  type: ClusterIP
