ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: test.rotflix.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: be-service
            port:
              number: 3001
